# khmer-ocr-pipeline

./: .dockerignore  .gitignore  CLAUDE.md  CONTEXT.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  app.py  dev.sh  lab.py  pyproject.toml  setup-metal-macos.sh  stop-metal-macos.sh
.github/workflows/: test.yml
corpus/: README.md
docs/: CODE_AUDIT.md  CONTEXT_SYNC_2026_06_22.md  FINAL_SPRINT_PLAN.md  GLOSSARY.md  HITL_RETRAIN.md  OPERATIONS.md  PROJECT_LOG.md  REPORT.md
docs/presentations/: 2026-07-07-progress-update.md
eval/: README.md
experiments/crop_scale/: gate_cap.py  gate_cap2048.json  gate_cap2900.json  gate_fixed_cap2048.json  gate_fixed_cap2900.json  heights_cap2048.json  heights_cap2900.json  measure_crop_heights.py
experiments/khmer_crnn/: FINDINGS.md  FINETUNING_PLAN.md  HANDOFF_TASKS.md  README.md  metrics.py  plot_metrics.py  train.py
experiments/kiri_finetune/: build_trainset.py  gate_ab.py  gate_baseline.json  gate_finetuned.json  train_kiri.py
experiments/layout_yolo/: README.md  export_onnx.py  finetune_doclayout.py  gate.py  gate_pp_stock.json  gate_pp_stock_x3.json  gate_smoke.json
fonts/: MANIFEST.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  i18n.tsx  index.css  main.tsx  ui.ts
scripts/: README.md  build_15_gt.py  colab_layout_finetune.ipynb  colab_recognizer.ipynb  collect_documents.py  compare_engines_ab.py  compare_recognizers.py  discover_slanet_api.py  draft_document_gt.py  eval_document.py  eval_notable_page.py  eval_recognizers.py  generate_ardb_eval_gt.py  harvest_textlayer_gt.py  mlx_recognizer.py  package_layout_dataset.py  probe_cambodiabudget_fragmentation.py  probe_layout_detectors.py  probe_rowstrip_recognition.py  probe_stamp_mask.py  recall_taxonomy.py  review_scan_gt.py  verify_corrections.py  verify_eval_gt.py  visualize_layout.py
src/khmer_pipeline/: __init__.py  analyze_benchmark.py  corrections.py  engine_registry.py  evaluate_judge.py  evaluate_structure.py  export.py  fonts.py  generate_degraded.py  generate_synthetic_documents.py  generate_synthetic_tables.py  harvest_ground_truth.py  (+18 more)
tests/: test_auto_engine.py  test_backend_status.py  test_corrections.py  test_device.py  test_engine_registry.py  test_evaluate_structure.py  test_export.py  test_generate_degraded.py  test_gt_provenance.py  test_harvest_eval_gt.py  test_harvest_ground_truth.py  test_harvest_table_gt.py  test_hybrid_engine.py  test_ingest.py  test_inspect_pdf.py  test_khmer_normalize.py  test_kiri_recognizer.py  test_layout_detect.py  test_pipeline.py  test_postprocess.py  test_preprocess.py  test_pseudo_label_layout.py  test_run_benchmark.py  test_surya.py  test_surya_kiri_engine.py  test_surya_kiri_vlm_engine.py  test_table_merge_pages.py  test_table_stitch.py  test_tesseract_engine.py  test_validate.py  test_visualize_benchmark.py  test_webapp_api.py  test_webapp_components.py  test_webapp_downloads.py  test_webapp_edits.py  test_webapp_effective.py  test_webapp_runner.py  test_webapp_tables.py
webapp/: __init__.py  api.py  components.py  downloads.py  edits.py  effective.py  main.py  registry.py  runner.py  settings.py  state.py  tables.py
(+82 files in other folders)
