[project]
name = "khmer-pipeline"
version = "0.1.0"
description = "Khmer document extraction pipeline"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "numpy>=1.26",
    "pillow>=10.0",
    "streamlit>=1.35",
    "opencv-python-headless>=4.8",
    "surya-ocr>=0.20.0,<0.21",
    "bleach>=6.0",
    "mlx-lm>=0.21",
    "transformers>=4.56.1,<5.0",
    "openai>=1.0,<2.0",
    "playwright>=1.44,<2.0",
    "pytesseract>=0.3,<0.4",
    "pandas>=2.0,<4.0",
    "rapid-table>=3.0,<4.0",
    "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8,<4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/khmer_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
