[project]
name = "khmer-pipeline"
version = "0.1.0"
description = "Khmer document extraction pipeline"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "numpy>=1.26",
    "pillow>=10.0",
    "streamlit>=1.35",
    "opencv-python-headless>=4.8",
    "surya-ocr>=0.20.0,<0.21",
    "bleach>=6.0",
    "mlx-lm>=0.21; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx>=0.31.2,<0.32; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torch>=2.12,<2.13",
    "transformers>=4.56.1,<5.0",
    "pytesseract>=0.3,<0.4",
    "pandas>=2.0,<4.0",
    "rapid-table>=3.0,<4.0",
    "openpyxl>=3.1,<4.0",
    "rapid-layout>=1.2.1,<2.0",
    "nicegui>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8,<4.0",
]
# Eval/datagen-only deps kept out of the core local-first pipeline: playwright
# (synthetic-doc rendering) and openai (optional cloud LLM judge — contradicts
# the local-first stance). Installed by CI's `uv sync --all-extras`.
eval-extras = [
    "openai>=1.0,<2.0",
    "playwright>=1.44,<2.0",
]
# Isolated group for the from-scratch CRNN training experiment
# (experiments/khmer_crnn/). Kept out of the core pipeline env — only
# install with `uv sync --extra experiments` when running that trainer.
experiments = [
    "torchvision>=0.27,<0.28",
    "datasets>=5.0,<6.0",
    "psutil>=7.2,<8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/khmer_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
